# matheric

./: .gitignore  LICENSE  README.md  pyproject.toml
src/matheric/: __init__.py
src/matheric/secure_input/: __init__.py  input.py
src/matheric/utils/: __init__.py  helpers.py
